--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,8 +6,13 @@
   user-select: none;
 }
 
+body[ng-controller="LabCtrl"] .navbar-fixed {
+  height: 147px;
+}
+
 .main {
-  padding-bottom: 15px;
+  width: 100%;
+  position: relative;
 }
 
 .title {
@@ -23,6 +28,7 @@
 .table {
   width: 100%;
   position: relative;
+  margin-bottom: 15px;
 }
 
 .table tbody tr {
@@ -69,4 +75,30 @@
   margin-bottom: 5px;
   height: auto !important;
   line-height: inherit !important;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 15px 0;
+  overflow: hidden;
+  position: relative;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  min-height: calc(100vh - 147px);
+}
+
+.card-50 {
+  margin: 0;
+  max-width: 60%;
+}
+
+.card-50 .card-action {
+  text-align: center;
+}
+
+.card-50 .card-action span + span {
+  margin-left: 15px;
 }
