--- a/app/views/camera.html
+++ b/app/views/camera.html
@@ -1,5 +1,5 @@
 <div class="fixed-action-btn horizontal">
-  <a class="btn-floating btn-large indigo" ng-show="isSaveShown" ng-click="savePhoto();">
+  <a class="btn-floating btn-large indigo" ng-disabled="isCamera" disabled ng-click="savePhoto();">
     <i class="large material-icons">file_download</i>
   </a>
   <a class="btn-floating btn-large indigo" ng-click="snap();">
