--- a/app/views/camera.html
+++ b/app/views/camera.html
@@ -1,8 +1,8 @@
 <div class="fixed-action-btn horizontal">
-  <a class="btn-floating btn-large indigo" ng-disabled="isCamera" disabled ng-click="savePhoto();">
+  <a class="btn-floating waves-effect waves-light btn-large indigo" disabled ng-disabled="isCamera" ng-click="savePhoto();">
     <i class="large material-icons">file_download</i>
   </a>
-  <a class="btn-floating btn-large indigo" ng-click="snap();">
+  <a class="btn-floating waves-effect waves-light btn-large indigo" ng-click="snap();">
     <i class="large material-icons">photo_camera</i>
   </a>
 </div>
