--- a/app/views/mic.html
+++ b/app/views/mic.html
@@ -1,8 +1,8 @@
 <div class="fixed-action-btn horizontal">
-  <a class="btn-floating btn-large indigo" ng-disabled="isAudio" disabled ng-click="SaveAudio();">
+  <a class="btn-floating waves-effect waves-light btn-large indigo" disabled ng-disabled="isAudio" ng-click="SaveAudio();">
     <i class="large material-icons">file_download</i>
   </a>
-  <a class="btn-floating btn-large indigo" ng-click="Record(sec);">
+  <a class="btn-floating waves-effect waves-light btn-large indigo" ng-click="Record(sec);">
     <i class="large material-icons">mic</i>
   </a>
 </div>
