--- a/app/views/fileManager.html
+++ b/app/views/fileManager.html
@@ -6,8 +6,8 @@
   </thead>
   <tbody>
     <tr ng-repeat="file in files | limitTo:barLimit | orderBy:['-isDir','name']">
-      <td ng-if="file.isDir" ng-click="getFiles(file.path)"><i class="material-icons">folder</i> {{file.name}}</td>
-      <td ng-if="!file.isDir" ng-click="saveFile(file.path)"><i class="material-icons">insert_drive_file</i> {{file.name}}</td>
+      <td ng-if="file.isDir" ng-click="getFiles(file.path);"><i class="material-icons">folder</i> {{file.name}}</td>
+      <td ng-if="!file.isDir" ng-click="saveFile(file.path);"><i class="material-icons">insert_drive_file</i> {{file.name}}</td>
     </tr>
   </tbody>
 </table>
