--- a/app/views/fileManager.html
+++ b/app/views/fileManager.html
@@ -1,7 +1,7 @@
 <table class="table table-manager bordered striped">
   <thead>
     <tr>
-      <th>Name</th>
+      <th><i class="material-icons">folder</i> Name</th>
     </tr>
   </thead>
   <tbody>
