--- a/app/views/mic.html
+++ b/app/views/mic.html
@@ -9,7 +9,7 @@
 
 <div class="record">
   <div class="range-field">
-    <label for="seconds">0</label>
+    <label for="seconds"><i class="material-icons">timer</i> <span></span></label>
     <input type="range" id="seconds" min="10" max="600" step="10" ng-model="sec" ng-change="showTime(sec);">
   </div>
   <div class="player" ng-show="!isAudio">
